--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -16,7 +16,7 @@
                 <div class="carousel-content container banner-info-2 bi-2 text-left">
                    {% include 'includes/messages.html' %}
                     <h3>Imagine the unimaginable</h3>
-                    <h5>Come and visit our high-tech performance car that is made only for you.</h5>
+                    <h5>Come and visit our high-tech performance cars that are made only for you.</h5>
                     <a href="{% url 'services' %}" class="btn btn-lg btn-theme">Read more</a>
                 </div>
             </div>
