--- a/templates/pages/services.html
+++ b/templates/pages/services.html
@@ -94,7 +94,7 @@
                     </div>
                     <div class="detail">
                         <h3>Engine Repair</h3>
-                        <p>If you notice, an engine failure, immediately contact the store where you bought the car. You will be notified...</p>
+                        <p>If you notice, an engine failure, immediately contact the store where you bought the car. You will be...</p>
                     </div>
                 </div>
             </div>
@@ -106,7 +106,7 @@
                     </div>
                     <div class="detail">
                         <h3>Dealership</h3>
-                        <p><strong>Blizzard</strong> car dealerships serve all over Finland. Discover Finland's most comprehensive selection of trade-in cars.</p>
+                        <p><strong>Blizzard</strong> car dealerships serve all over Finland. Discover Finland's most comprehensive selection...</p>
                     </div>
                 </div>
             </div>
@@ -118,7 +118,7 @@
                     </div>
                     <div class="detail">
                         <h3>Security</h3>
-                        <p><strong>Blizzard</strong> Additional security brings peace of mind. It covers repairs in case of unexpected breakdowns - less than €2/day</p>
+                        <p><strong>Blizzard</strong> Additional security brings peace of mind. It covers repairs in case of unexpected breakdowns..</p>
                     </div>
                 </div>
             </div>
