--- a/blizzard/static/css/style.css
+++ b/blizzard/static/css/style.css
@@ -9748,7 +9748,7 @@ input, input::-webkit-input-placeholder, textarea::-webkit-input-placeholder{
     padding-right: 20px;
     margin-bottom: 0;
     line-height: 49px;
-    color: #f0151f;
+    color: #09b9f3;
 }
 .ratings-2 .cartype{
     font-weight: 600;
@@ -9756,7 +9756,7 @@ input, input::-webkit-input-placeholder, textarea::-webkit-input-placeholder{
     padding-right: 20px;
     margin-bottom: 0;
     line-height: 49px;
-    color: #f0151f;
+    color: #09b9f3;
 }
 
 
