refactored html pages

--- a/templates/includes/topbar.html
+++ b/templates/includes/topbar.html
@@ -5,9 +5,9 @@
         <div class="row">
             <div class="col-lg-8 col-md-8 col-sm-7">
                 <div class="list-inline">
-                    <a href="tel:+55-4XX-634-7071"><i class="fa fa-phone"></i>+358 XX XXX XX00</a>
-                    <a href="tel:info@themevessel.com"><i class="fa fa-envelope"></i>info@blizzardauto.fi</a>
-                    <a href="tel:info@themevessel.com"><i class="fa fa-clock-o"></i>Mon - SAT: 9:00am - 5:00pm</a>
+                    <a href="puh:+358 XX XXX XX00"><i class="fa fa-phone"></i>+358 XX XXX XX00</a>
+                    <a href="https://blizzard-car.herokuapp.com/"><i class="fa fa-envelope"></i>info@blizzardauto.fi</a>
+                    <a href="https://blizzard-car.herokuapp.com/"><i class="fa fa-clock-o"></i>Mon - SAT: 9:00am - 5:00pm</a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-5">
