--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -89,7 +89,7 @@
                             </div>
                             <div class="detail">
                                 <h5>Web:</h5>
-                                <p><a href="#">www.blizzardauto.fi</a></p>
+                                <p><a href="https://blizzard-car.herokuapp.com/"></a>ßLIZZARD</p>
                             </div>
                         </div>
                         <div class="ci-box mb-0">
