contact details connected to heroku server site

--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -80,7 +80,7 @@
                             </div>
                             <div class="detail">
                                 <h5>Email:</h5>
-                                <p><a href="#">info@blizzardauto.fi</a></p>
+                                <p><a href="https://blizzard-car.herokuapp.com/contact">info@blizzardauto.fi</a></p>
                             </div>
                         </div>
                         <div class="ci-box">
@@ -89,7 +89,7 @@
                             </div>
                             <div class="detail">
                                 <h5>Web:</h5>
-                                <p><a href="https://blizzard-car.herokuapp.com/"></a>ßLIZZARD</p>
+                                <p><a href="https://blizzard-car.herokuapp.com/">ßLIZZARD</a> Auto</p>
                             </div>
                         </div>
                         <div class="ci-box mb-0">
