admin panel set to the navbar

--- a/blizzard/static/css/style.css
+++ b/blizzard/static/css/style.css
@@ -9768,6 +9768,11 @@ a.nav-link.active{
   color: #fff !important;
 }
 
+.blz-admin .nav-item {
+    float: right;
+    display: inline-block;
+}
+
 
 
 
