--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -66,6 +66,17 @@
                         {% endif %}
                         href="{% url 'contact' %}">Contact</a>
                     </li>
+                    <li class="nav-item">
+                        <a
+                        {% if 'inquiry' in request.path %}
+                          class="nav-link active"
+                          {% else %}
+                          class="nav-link"
+                          {% endif %}
+                          href="admin">
+                            Admin
+                        </a>
+                    </li>
                     <li class="nav-item dropdown m-hide">
                         <a href="#full-page-search" class="nav-link h-icon">
                             <i class="fa fa-search"></i>
