--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -73,7 +73,7 @@
                           {% else %}
                           class="nav-link"
                           {% endif %}
-                          href="admin">
+                          href="admin"><i class="fa fa-shield"></i>
                             Admin
                         </a>
                     </li>
