--- a/templates/includes/topbar.html
+++ b/templates/includes/topbar.html
@@ -28,7 +28,7 @@
                         <a href="{% url 'login' %}" class="sign-in"><i class="fa fa-sign-in"></i> Login</a>
                     </li>
                     <li>
-                        <a href="{% url 'register' %}" class="sign-in"><i class="fa fa-user"></i> Register</a>
+                        <a href="{% url 'register' %}" class="sign-in"><i class="fa fa-users"></i> Register</a>
                     </li>
                     {% endif %}
                 </ul>
