--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -97,7 +97,7 @@
                                 <i class="flaticon-fax"></i>
                             </div>
                             <div class="detail">
-                                <h5>Fax:</h5>
+                                <h5>Puh:</h5>
                                 <p><a href="#">+358 XX XXX XX00</a></p>
                             </div>
                         </div>
